2004-06-08  Wim Taymans  <wim@fluendo.com>

	* gst/tcp/gsttcp.c: (gst_tcp_gdp_read_header),
	(gst_tcp_gdp_read_caps), (gst_tcp_gdp_write_header),
	(gst_tcp_gdp_write_caps):
	* gst/tcp/gsttcpclientsrc.c: (gst_tcpclientsrc_get):
	* gst/tcp/gsttcpserversrc.c: (gst_tcpserversrc_gdp_read_caps),
	(gst_tcpserversrc_gdp_read_header), (gst_tcpserversrc_get):
	Memory leak fixes

2004-06-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/vorbis/Makefile.am:
	* ext/vorbis/vorbis.c: (plugin_init):
	* ext/vorbis/vorbisparse.c: (gst_vorbis_parse_base_init),
	(gst_vorbis_parse_class_init), (gst_vorbis_parse_init),
	(vorbis_parse_set_header_on_caps), (vorbis_parse_chain),
	(vorbis_parse_change_state):
	* ext/vorbis/vorbisparse.h:
          adding a vorbisparse element that marks the buffers, streaming
          raw vorbis using GDP now works, whee

2004-06-08  Wim Taymans  <wim@fluendo.com>

	* ext/jpeg/Makefile.am:
	* ext/jpeg/README:
	* ext/jpeg/gstjpeg.c: (plugin_init):
	* ext/jpeg/gstsmokedec.c: (gst_smokedec_get_type),
	(gst_smokedec_base_init), (gst_smokedec_class_init),
	(gst_smokedec_init), (gst_smokedec_link), (gst_smokedec_chain):
	* ext/jpeg/gstsmokedec.h:
	* ext/jpeg/gstsmokeenc.c: (gst_smokeenc_get_type),
	(gst_smokeenc_base_init), (gst_smokeenc_class_init),
	(gst_smokeenc_init), (gst_smokeenc_getcaps), (gst_smokeenc_link),
	(gst_smokeenc_resync), (gst_smokeenc_chain),
	(gst_smokeenc_set_property), (gst_smokeenc_get_property):
	* ext/jpeg/gstsmokeenc.h:
	* ext/jpeg/smokecodec.c: (smokecodec_init_destination),
	(smokecodec_flush_destination), (smokecodec_term_destination),
	(smokecodec_init_source), (smokecodec_fill_input_buffer),
	(smokecodec_skip_input_data), (smokecodec_resync_to_restart),
	(smokecodec_term_source), (smokecodec_encode_new),
	(smokecodec_decode_new), (smokecodec_info_free),
	(smokecodec_set_quality), (smokecodec_get_quality),
	(smokecodec_set_threshold), (smokecodec_get_threshold),
	(smokecodec_set_bitrate), (smokecodec_get_bitrate),