@@ -317,14 +317,14 @@ gst_tcpserversrc_get (GstPad * pad)
       if (ret <= 0) {
         GST_ELEMENT_ERROR (src, RESOURCE, READ, (NULL),
             ("select failed: %s", g_strerror (errno)));
-        return NULL;
+        return GST_DATA (gst_event_new (GST_EVENT_EOS));
       }
       /* ask how much is available for reading on the socket */
       ret = ioctl (src->client_sock_fd, FIONREAD, &readsize);
       if (ret < 0) {
         GST_ELEMENT_ERROR (src, RESOURCE, READ, (NULL),
             ("ioctl failed: %s", g_strerror (errno)));
-        return NULL;
+        return GST_DATA (gst_event_new (GST_EVENT_EOS));
       }
 
       buf = gst_buffer_new_and_alloc (readsize);
@@ -337,7 +337,7 @@ gst_tcpserversrc_get (GstPad * pad)
         if (!(caps = gst_tcpserversrc_gdp_read_caps (src))) {
           GST_ELEMENT_ERROR (src, RESOURCE, READ, (NULL),
               ("Could not read caps through GDP"));
-          return NULL;
+          return GST_DATA (gst_event_new (GST_EVENT_EOS));
         }
         src->caps_received = TRUE;
         string = gst_caps_to_string (caps);
@@ -346,7 +346,7 @@ gst_tcpserversrc_get (GstPad * pad)
 
         if (!gst_pad_try_set_caps (pad, caps)) {
           g_warning ("Could not set caps");
-          return NULL;
+          return GST_DATA (gst_event_new (GST_EVENT_EOS));
         }
       }
 
@@ -354,7 +354,7 @@ gst_tcpserversrc_get (GstPad * pad)
       if (!(data = gst_tcpserversrc_gdp_read_header (src))) {
         GST_ELEMENT_ERROR (src, RESOURCE, READ, (NULL),
             ("Could not read data header through GDP"));
-        return NULL;
+        return GST_DATA (gst_event_new (GST_EVENT_EOS));
       }
       if (GST_IS_EVENT (data))
         return data;
@@ -377,7 +377,7 @@ gst_tcpserversrc_get (GstPad * pad)
   if (ret < 0) {
     GST_ELEMENT_ERROR (src, RESOURCE, READ, (NULL), GST_ERROR_SYSTEM);
     gst_buffer_unref (buf);
-    return NULL;
+    return GST_DATA (gst_event_new (GST_EVENT_EOS));
   }
 
   /* if we read 0 bytes, and we're blocking, we hit eos */
